unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/Staging_Oracle_AR_Customer__c.object-meta.xml
<CustomObject>
    <description>Staging Table for Customers from Oracle AR</description>
    <label>CORE Customer</label>
    <nameField>
        <label>Record Name CUSTOMER_NUMBER</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CORE Customers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>