unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_ADDR_CUST_ACCT_SITE_ID__c.field-meta.xml
<CustomField>
    <fullName>AR_ADDR_CUST_ACCT_SITE_ID__c</fullName>
    <description>Stores values from Oracle AR Site XGES_AR_ADDRESSES_V.ADDRESS_ID column. This column is derived from HZ_CUST_ACCT_SITES_ALL.CUST_ACCT_SITE_ID column.</description>
    <label>Site ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>