unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_ADDR_CUST_SITE_CREATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>AR_ADDR_CUST_SITE_CREATION_DATE__c</fullName>
    <description>Stores values from Oracle AR Site XGES_AR_ADDRESSES_V.CREATION_DATE column. This column is derived from HZ_CUST_ACCT_SITES_ALL.CREATION_DATE column.</description>
    <label>Site Created</label>
    <type>DateTime</type>
</CustomField>