unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_ADDR_CUST_SITE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>AR_ADDR_CUST_SITE_STATUS__c</fullName>
    <description>Stores values from Oracle AR Site XGES_AR_ADDRESSES_V.STATUS column. This column is derived from HZ_CUST_ACCT_SITES_ALL.STATUS column.</description>
    <label>Site Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>