unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_ADDR_CUST_SITE_USE_CREATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>AR_ADDR_CUST_SITE_USE_CREATION_DATE__c</fullName>
    <description>Stores values from Oracle AR Site Use HZ_CUST_SITE_USES_ALL.CREATION_DATE column.</description>
    <label>Site Use Created</label>
    <type>DateTime</type>
</CustomField>