unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_ADDR_CUST_SITE_USE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>AR_ADDR_CUST_SITE_USE_STATUS__c</fullName>
    <description>Stores values from Oracle AR Site Use HZ_CUST_SITE_USES_ALL.STATUS column.</description>
    <label>Site Use Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>