unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_ADDR_PARTY_SITE_LOC_ID__c.field-meta.xml
<CustomField>
    <fullName>AR_ADDR_PARTY_SITE_LOC_ID__c</fullName>
    <description>Stores values from Oracle AR Site XGES_AR_ADDRESSES_V.PARTY_LOCATION_ID column. This column is derived from HZ_PARTY_SITES.LOCATION_ID column.</description>
    <label>Site Location ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>