unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_CUST_ACCOUNT_ID__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_ACCOUNT_ID__c</fullName>
    <description>Stores values from Oracle AR Account Customer HZ_CUST_ACCOUNTS.CUST_ACCOUNT_ID column.</description>
    <label>Customer Account ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>