unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_CUST_CREATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_CREATION_DATE__c</fullName>
    <description>Stores values from Oracle AR Account Customer HZ_CUST_ACCOUNTS.CREATION_DATE column.</description>
    <label>Customer Created</label>
    <type>DateTime</type>
</CustomField>