unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_CUST_LAST_UPDATED_BY__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_LAST_UPDATED_BY__c</fullName>
    <description>Stores values from Oracle AR Account Customer HZ_CUST_ACCOUNTS.LAST_UPDATED_BY column.</description>
    <label>Customer Last Modified By</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>