unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_CUST_PARTY_STATUS__c.field-meta.xml
<CustomField>
    <fullName>AR_CUST_PARTY_STATUS__c</fullName>
    <description>Stores values from Oracle AR Account Party HZ_PARTIES.STATUS column.</description>
    <label>Party Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>