unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_CUSTOMER_ADDRESS1__c.field-meta.xml
<CustomField>
    <fullName>AR_CUSTOMER_ADDRESS1__c</fullName>
    <description>Stores values from Oracle AR Site XGES_AR_ADDRESSES_V.ADDRESS1 column. This column is derived from HZ_LOCATIONS.ADDRESS1 column.</description>
    <label>Address 1</label>
    <length>240</length>
    <type>Text</type>
</CustomField>