unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_CUSTOMER_DUNS_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>AR_CUSTOMER_DUNS_NUMBER__c</fullName>
    <description>Stores values from Oracle AR Account Party HZ_PARTIES.DUNS_NUMBER column.</description>
    <label>DUNS Number</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>