unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_CUSTOMER_NAME__c.field-meta.xml
<CustomField>
    <fullName>AR_CUSTOMER_NAME__c</fullName>
    <description>Stores values from Oracle AR Party HZ_PARTIES.PARTY_NAME column.</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>