unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_CUSTOMER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>AR_CUSTOMER_NUMBER__c</fullName>
    <description>Stores values from Oracle AR Customer HZ_CUST_ACCOUNTS.ACCOUNT_NUMBER column.</description>
    <label>Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>