unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_CUSTOMER_POSTAL_CODE__c.field-meta.xml
<CustomField>
    <fullName>AR_CUSTOMER_POSTAL_CODE__c</fullName>
    <description>Stores values from Oracle AR Site XGES_AR_ADDRESSES_V.POSTAL_CODE column. This column is derived from HZ_LOCATIONS.POSTAL_CODE column.</description>
    <label>Postal Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>