unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/AR_CUSTOMER_STATE__c.field-meta.xml
<CustomField>
    <fullName>AR_CUSTOMER_STATE__c</fullName>
    <description>Stores values from Oracle AR Site XGES_AR_ADDRESSES_V.STATE column. This column is derived from HZ_LOCATIONS.STATE column.</description>
    <label>State</label>
    <length>60</length>
    <type>Text</type>
</CustomField>