unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/Interface_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Interface_Batch_Number__c</fullName>
    <description>Batch # for interfaced rows</description>
    <label>Batch #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>