unpackaged/main/default/objects/Staging_Oracle_AR_Customer__c/fields/SHOW_CLOSE_DATE__c.field-meta.xml
<CustomField>
    <fullName>SHOW_CLOSE_DATE__c</fullName>
    <description>Stores values from Oracle Show Occurrence XGEC_SW_SHOW_OCCR.SHOW_CLOSE_DATE column.</description>
    <label>Show Close Date</label>
    <type>DateTime</type>
</CustomField>